# python-manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.template.json  update.md
include/: command_handler.h  config_manager.h  logger.h  proxy_utils.h
include/gui/: gui_app.h
resources/: gui.rc  pym.rc  python.rc  pythonw.rc
src/: command_handler.cpp  config_manager.cpp  logger.cpp  main.cpp  pip_proxy.cpp  proxy_utils.cpp  python_proxy.cpp  pythonw_proxy.cpp
src/gui/: gui_main.cpp
